dark mode fixes
fixed some issues with dark mode, removed card footers

--- a/css/calculateEmissions.css
+++ b/css/calculateEmissions.css
@@ -94,3 +94,11 @@ fieldset {
     margin: auto auto;
     width: 80%;
 }
+
+.dark-mode h1 {
+    color: #fff;
+}
+
+.dark-mode label {
+    color: black;
+}
