--- a/css/style.css
+++ b/css/style.css
@@ -310,7 +310,7 @@ footer div a {
 }
 
 .social-icon:hover {
-	color: #222;
+	color: teal;
 	/* change color when hover over the link */
 }
 
@@ -453,4 +453,14 @@ footer div a {
 
 .card {
 	text-align: center;
+}
+.card-deck {
+	margin-bottom: 5%;
+}
+
+.dark-mode .card {
+	background-color: black;
+	color: #fff;
+	border: 1px solid #fff;
+
 }
